--- a/style.css
+++ b/style.css
@@ -16,4 +16,74 @@ html { box-sizing: border-box; }
 
 body {
 	background-color: #bdc3c7;
+	font-family: 'Montserrat', sans-serif;
+	font-family: 'Source Sans Pro', sans-serif;
+	
+	
 }
+
+.hlavicka {
+	position: static;
+}
+
+.jmeno {
+	font-family: 'Montserrat', sans-serif;
+	color: white;
+	margin-top: 20px;
+}
+
+.profil {
+	position: relative;
+	width: 300px;
+	
+	background-color:#31363b;
+	box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+}
+
+.foto {
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+
+.obsah {
+	font-family: 'Source Sans Pro', sans-serif;
+	color: whitesmoke;
+	padding: 200px 20px 180px 20px;
+
+}
+
+.logo {
+	position: absolute;
+	left: 215px;
+	bottom: 550px;
+	background: #b92e81;
+	border-radius: 25px;
+	border: 2px solid #b92e81;
+	box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+
+}
+
+.odkazy {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.portfolio {
+
+
+}
+
+.portfolio a {
+	text-decoration: none;
+	color: #3b5998;
+	font-family: 'Montserrat', sans-serif;
+	text-transform: uppercase;
+	border-top: 2px solid #3f464d;
+	width: 100%;
+	display: inline-block;
+	
+	
+}
+	
