--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 /* nejsme vcerejsi, pouzivame moderni a intuitivni box model */
-html { box-sizing: border-box; }
-*, ::after, ::before { box-sizing: inherit; }
+html {
+  box-sizing: border-box;
+}
+*,
+::after,
+::before {
+  box-sizing: inherit;
+}
 
 /*
 	BARVY
@@ -13,77 +19,101 @@ html { box-sizing: border-box; }
 	twitter    #1da1f2
 */
 
-
 body {
-	background-color: #bdc3c7;
-	font-family: 'Montserrat', sans-serif;
-	font-family: 'Source Sans Pro', sans-serif;
-	
-	
+  background-color: #bdc3c7;
+  font-family: "Montserrat", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 .hlavicka {
-	position: static;
+  position: static;
 }
 
 .jmeno {
-	font-family: 'Montserrat', sans-serif;
-	color: white;
-	margin-top: 20px;
+  font-family: "Montserrat", sans-serif;
+  color: white;
+  padding-top: 20px;
 }
 
 .profil {
-	position: relative;
-	width: 300px;
-	
-	background-color:#31363b;
-	box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+  position: relative;
+  width: 300px;
+
+  background-color: #31363b;
+  box-shadow: 5px 0px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 .foto {
-	position: absolute;
-	right: 0;
-	top: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .obsah {
-	font-family: 'Source Sans Pro', sans-serif;
-	color: whitesmoke;
-	padding: 200px 20px 180px 20px;
-
+  font-family: "Source Sans Pro", sans-serif;
+  color: whitesmoke;
+  padding: 200px 20px 20px 20px;
+  position: relative;
 }
 
 .logo {
-	position: absolute;
-	left: 215px;
-	bottom: 550px;
-	background: #b92e81;
-	border-radius: 25px;
-	border: 2px solid #b92e81;
-	box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+  position: absolute;
+  left: 210px;
+  bottom: 455px;
+  background: #b92e81;
+  border-radius: 25px;
 
+  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 .odkazy {
-	list-style: none;
-	margin: 0;
-	padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .portfolio {
-
-
+  text-align: center;
+  margin: auto;
 }
 
 .portfolio a {
-	text-decoration: none;
-	color: #3b5998;
-	font-family: 'Montserrat', sans-serif;
-	text-transform: uppercase;
-	border-top: 2px solid #3f464d;
-	width: 100%;
-	display: inline-block;
-	
-	
+  text-decoration: none;
+  color: grey;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  border-top: 2px solid #3f464d;
+  border-bottom: 2px solid #3f464d;
+  width: 100%;
+  display: inline-block;
+  padding: 15px;
+  font-weight: bold;
 }
-	
+
+.facebook a {
+  display: inline-block;
+  padding: 15px;
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  color: grey;
+  text-transform: uppercase;
+  text-align: center;
+  width: 50%;
+  font-weight: bold;
+}
+
+.twitter a {
+  display: inline-block;
+  padding: 15px;
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  color: white;
+  text-transform: uppercase;
+  background-color: #1da1f2;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 50%;
+  text-align: center;
+  font-weight: bold;
+}
